apps/base/download-deluge/deploy/daemon/daemon-statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: deluge-daemon
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: deluge
      app.kubernetes.io/component: deluge-daemon
  template:
    metadata:
      labels:
        app.kubernetes.io/name: deluge
        app.kubernetes.io/component: deluge-daemon
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000 # deluge
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: deluge-daemon
        image: "registry.lan/deluge-daemon:2.1.1_1.2.14-alpine"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 58846
          name: daemon
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        readinessProbe:
          tcpSocket:
            port: daemon
          initialDelaySeconds: 3
          periodSeconds: 15
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 256Mi
        volumeMounts:
        - name: cluster-config
          mountPath: /etc/localtime
          subPath: localtime
          readOnly: true
        - name: deluge-data
          mountPath: /home/deluge/.config/deluge
          subPath: config
        - name: deluge-auth
          mountPath: /home/deluge/.config/deluge/auth
          subPath: auth
        - name: deluge-download
          mountPath: /mnt/download
        - name: tmp-volume
          mountPath: /tmp
      volumes:
      - name: cluster-config
        configMap:
          name: cluster-config
      - name: deluge-data
        persistentVolumeClaim:
          claimName: deluge-data
      - name: deluge-auth
        secret:
          secretName: deluge-auth
      - name: deluge-download
        persistentVolumeClaim:
          claimName: nfs-download
      - name: tmp-volume
        emptyDir: {}
      imagePullSecrets:
      - name: docker-config
      nodeSelector:
        capability/general-purpose: 'yes'
