apps/base/download-deluge/deploy/daemon/daemon-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deluge-daemon
spec:
  ports:
  - port: 58846
    targetPort: daemon
    name: daemon
  selector:
    app.kubernetes.io/name: deluge
    app.kubernetes.io/component: deluge-daemon
